--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>ExamplePlugin</name>
-    <artifactId>example-plugin</artifactId>
+    <name>BlockRegen</name>
+    <artifactId>block-regen</artifactId>
     <groupId>org.powernukkit.plugins</groupId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -15,13 +15,22 @@
             <artifactId>powernukkit</artifactId>
             <version>1.6.0.1-PN</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.nukkitx</groupId>
+            <artifactId>fakeinventories</artifactId>
+            <version>1.0.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
-
     <repositories>
         <repository>
             <id>powernukkit-snapshots</id> <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <releases><enabled>false</enabled></releases>
+        </repository>
+
+        <repository>
+            <id>nukkitx-repo</id>
+            <url>https://repo.nukkitx.com/snapshot/</url>
         </repository>
     </repositories>
 
@@ -38,6 +47,13 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>**/plugin.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/blocks.yml</include>
                 </includes>
             </resource>
             <resource>
